endif::[]

////
[[release-notes-x.x.x]]
==== x.x.x (YYYY-MM-DD)

[float]
===== Breaking changes
- Breaking change

[float]
===== Deprecated
- Deprecation {pull}2526[#2526]

[float]
===== Added
- Feature {pull}2526[#2526]

[float]
===== Changed
- Change {pull}2526[#2526]

[float]
===== Fixed

[float]
[[unreleased]]
==== Unreleased
////

[[release-notes-4.x]]
=== Ruby Agent version 4.x

[[release-notes-4.7.2]
==== 4.7.2

[float]
===== Fixed
- Address machineType not being returned in GCP metadata {pull}1435[#1435]

[[release-notes-4.7.1]
==== 4.7.1

[float]
===== Fixed
- Skip capturing cookie header when it's set separately {pull}1405[#1405]
- Changes/fixes to metadata.cloud.* fields collected for GCP {pull}1415[#1415]
- Pin version of bigdecimal for ruby 2.4 {pull}1417[#1417]
- Use response method on Faraday error for older versions of the library {pull}1419[#1419]
- Fix ActionDispatchSpy#render_exception for Rails 7.1 {pull}1423[#1423]
- Use graphql < 2.1 when Ruby < 2.7 {pull}1425[#1425]
- Guard against various Faraday exception response formats {pull}1428[#1428]

[[release-notes-4.7.0]]
==== 4.7.0

[float]
===== Fixed
- Handle Faraday response being nil {pull}1382[#1382]
- Fix error with invalid %-encoding {pull}1400[#1400]

[float]
===== Added
- Add keyword args for span_method helper {pull}1395[#1395]

[[release-notes-4.6.2]]
==== 4.6.2

[float]
===== Fixed
- Fix Faraday::RackBuilder::StackLocked {pull}1371[#1371]

[[release-notes-4.6.1]]
==== 4.6.1

[float]
===== Fixed

- Fix growing number of open file descriptors when HTTP request to APM is never sent {pull}1351[#1351]
- Fix setting span http status code when Faraday Middleware is used {pull}1368[#1368]
- Handle whitespace when splitting tracestate entries {pull}1353[#1353]

[[release-notes-4.6.0]]
==== 4.6.0

[float]
===== Added

- Added transaction_name to reported error to allow grouping by transaction name {pull}1267[#1267]